--- a/default.env
+++ b/default.env
@@ -35,8 +35,9 @@ DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
 # Teku rapid sync via initial state. Please create an Infura eth2 project first, then replace the {projectid} and {secret} here
-# and uncomment this line
+# and use this line instead of the empty one
 #TEKU_RAPID_SYNC=--initial-state https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
+TEKU_RAPID_SYNC=
 
 # Beacon node address. This could be comma-separated for Lighthouse, with Infura as failover,
 # or could just be an eth2 Infura project URL for Teku or Lighthouse "validator only" setups. Not in use for Prysm or Nimbus.
