--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -5,6 +5,8 @@ services:
     image: lighthouse:local
     volumes:
       - /data/eth/mainnet/validator:/var/lib/lighthouse
+    ports:
+      - 5064:5064
     entrypoint:
       - docker-entrypoint.sh
       - lighthouse
@@ -18,6 +20,11 @@ services:
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
+      - --metrics
+      - --metrics-address
+      - 0.0.0.0
+      - --metrics-port
+      - '5064'
   validator-import:
     restart: "no"
     image: lighthouse:local
