--- a/eth1-traefik.yml
+++ b/eth1-traefik.yml
@@ -1,19 +1,1 @@
-# To be used in conjunction with oe.yml, nm.yml, besu.yml or geth.yml
-version: "3.4"
-services:
-  eth1:
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.eth1.service=eth1
-      - traefik.http.routers.eth1.entrypoints=websecure
-      - traefik.http.routers.eth1.rule=Host(`${ETH1_HOST}.${DOMAIN}`)
-      - traefik.http.services.eth1.loadbalancer.server.port=${ETH1_RPC_PORT}
-      - traefik.http.routers.eth1ws.service=eth1ws
-      - traefik.http.routers.eth1ws.entrypoints=websecure
-      - traefik.http.routers.eth1ws.rule=Host(`${ETH1_WS_HOST}.${DOMAIN}`)
-      - traefik.http.services.eth1ws.loadbalancer.server.port=${ETH1_WS_PORT}
-    depends_on:
-      - traefik
-
-  eth2:
-    image: tianon/true
+ec-traefik.yml
