--- a/nm.yml
+++ b/nm.yml
@@ -1,6 +1,6 @@
 version: "3.4"
 services:
-  eth1:
+  execution:
     restart: "${RESTART}"
     stop_grace_period: 3m
     build:
@@ -13,11 +13,15 @@ services:
     volumes:
       - nm-eth1-data:/var/lib/nethermind
     ports:
-      - ${ETH1_PORT}:${ETH1_PORT}/tcp
-      - ${ETH1_PORT}:${ETH1_PORT}/udp
+      - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/tcp
+      - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/udp
     expose:
-      - ${ETH1_RPC_PORT}/tcp
-      - ${ETH1_WS_PORT}/tcp
+      - ${ETH1_RPC_PORT}${EC_RPC_PORT}/tcp
+      - ${ETH1_WS_PORT}${EC_WS_PORT}/tcp
+    networks:
+      default:
+        aliases:
+          - eth1
     entrypoint:
       - docker-entrypoint.sh
       - dotnet
@@ -27,9 +31,9 @@ services:
       - --Init.WebSocketsEnabled
       - "true"
       - --Network.DiscoveryPort
-      -  ${ETH1_PORT}
+      -  ${ETH1_PORT}${EC_P2P_PORT}
       - --Network.P2PPort
-      -  ${ETH1_PORT}
+      -  ${ETH1_PORT}${EC_P2P_PORT}
       - --JsonRpc.Enabled
       - "true"
       - --JsonRpc.EnabledModules
@@ -37,19 +41,19 @@ services:
       - --JsonRpc.Host
       - 0.0.0.0
       - --JsonRpc.Port
-      - ${ETH1_RPC_PORT}
+      - ${ETH1_RPC_PORT}${EC_RPC_PORT}
       - --JsonRpc.WebSocketsPort
-      - ${ETH1_WS_PORT}
+      - ${ETH1_WS_PORT}${EC_WS_PORT}
       - --Sync.FastSync
       - "true"
       - --config
-      - ${ETH1_NETWORK}
+      - ${ETH1_NETWORK}${EC_NETWORK}
       - --Pruning.Enabled
       - "true"
       - --Pruning.CacheMb
       - "4096"
-  eth2:
+  eth:
     depends_on:
-      - eth1
+      - execution
 volumes:
   nm-eth1-data:
