--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -12,9 +12,9 @@ WORKDIR /go/src
 RUN bash -c "git clone https://github.com/prysmaticlabs/prysm.git && cd prysm && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && bazel build --config=release //beacon-chain:beacon-chain && bazel build --config=release //validator:validator && bazel build --config=release //slasher:slasher"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:buster-slim as beacon
+FROM debian:buster-slim as consensus
 
-ARG USER=prysmbeacon
+ARG USER=prysmconsensus
 ARG UID=10002
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -50,7 +50,7 @@ COPY ./docker-entrypoint.sh /usr/local/bin/
 
 ENTRYPOINT ["docker-entrypoint.sh","beacon-chain"]
 
-FROM beacon as validator
+FROM consensus as validator
 
 ARG USER=prysmvalidator
 ARG UID=10000
@@ -70,5 +70,5 @@ RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700
 
 COPY ./validator-import.sh /usr/local/bin/
 
-FROM beacon as slasher
+FROM consensus as slasher
 
