--- a/traefik-cf.yml
+++ b/traefik-cf.yml
@@ -39,7 +39,7 @@ services:
       - ZONE=${DOMAIN}
       - SUBDOMAIN=${DDNS_SUBDOMAIN}
       - PROXIED=${DDNS_PROXY}
-  eth2:
+  eth:
     depends_on:
       - traefik
 volumes:
