--- a/eth1-shared.yml
+++ b/eth1-shared.yml
@@ -1,9 +1,1 @@
-# To be used in conjunction with oe.yml, nm.yml, besu.yml or geth.yml
-version: "3.4"
-services:
-  eth1:
-    ports:
-      - ${ETH1_RPC_PORT}:${ETH1_RPC_PORT}/tcp
-      - ${ETH1_WS_PORT}:${ETH1_WS_PORT}/tcp
-  eth2:
-    image: tianon/true
+ec-shared.yml
