--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Test default.env
         run: |
           cp default.env .env
-          docker-compose up -d eth2
+          docker-compose up -d eth
