Added beta erigon support, source build

--- a/default.env
+++ b/default.env
@@ -97,6 +97,12 @@ PRYSM_DOCKER_TAG=stable
 # Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 
+# Erigon
+ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+ERIGON_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+ERIGON_DOCKERFILE=Dockerfile.source
+
 # OpenEthereum
 OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 OE_DOCKER_TAG=latest
