Local TZ support for all clients

--- a/besu.yml
+++ b/besu.yml
@@ -12,6 +12,8 @@ services:
     image: besu:local
     volumes:
       - besu-eth1-data:/var/lib/besu
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     ports:
       - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/tcp
       - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/udp
