--- a/geth/Dockerfile.binary
+++ b/geth/Dockerfile.binary
@@ -9,7 +9,7 @@ ARG USER=geth
 ARG UID=10001
 
 # So we can switch to non-root user if started as root
-RUN apk add --no-cache su-exec ca-certificates bash
+RUN apk add --no-cache su-exec ca-certificates bash tzdata
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
