--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -10,7 +10,7 @@ ARG USER=prysmconsensus
 ARG UID=10002
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-  ca-certificates curl bash \
+  ca-certificates curl bash tzdata \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
  
