--- a/traefik-aws.yml
+++ b/traefik-aws.yml
@@ -32,6 +32,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - certs:/letsencrypt 
       - ~/.aws:/root/.aws:ro
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
   eth:
     depends_on:
       - traefik
