--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -17,7 +17,7 @@ FROM alpine:latest
 ARG USER=geth
 ARG UID=10001
 
-RUN apk add --no-cache ca-certificates su-exec bash
+RUN apk add --no-cache ca-certificates su-exec bash tzdata
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
