--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -25,6 +25,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   libssl-dev \
   ca-certificates \
   wget \
+  tzdata \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
