--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -14,7 +14,7 @@ RUN groupmod -g "${UID}" user && usermod -u "${UID}" -g "${UID}" user
 
 RUN set -eux; \
         apt-get update; \
-        apt-get install -y gosu ca-certificates bash; \
+        apt-get install -y gosu ca-certificates bash tzdata; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
