--- a/oe.yml
+++ b/oe.yml
@@ -12,6 +12,8 @@ services:
     stop_grace_period: 3m
     volumes:
       - oe-eth1-data:/var/lib/openethereum
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     ports:
       - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/tcp
       - ${ETH1_PORT}${EC_P2P_PORT}:${ETH1_PORT}${EC_P2P_PORT}/udp
