--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -15,6 +15,8 @@ services:
     image: prysm-consensus:local
     volumes:
       - prysmbeacon-data:/var/lib/prysm
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     ports:
       - ${PRYSM_PORT}:${PRYSM_PORT}/tcp
       - ${PRYSM_UDP_PORT}:${PRYSM_UDP_PORT}/udp
@@ -59,6 +61,8 @@ services:
     image: prysm-validator:local
     volumes:
       - prysmvalidator-data:/var/lib/prysm
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - docker-entrypoint.sh
       - validator
@@ -85,6 +89,8 @@ services:
     image: prysm-validator:local
     volumes:
       - prysmvalidator-data:/var/lib/prysm
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - validator
       - --datadir
@@ -105,6 +111,8 @@ services:
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     entrypoint: validator-import.sh
     command:
       - validator
@@ -125,6 +133,8 @@ services:
     image: prysm-validator:local
     volumes:
       - prysmvalidator-data:/var/lib/prysm
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - validator
       - --verbosity
