--- a/teku-validator.yml
+++ b/teku-validator.yml
@@ -11,6 +11,8 @@ services:
     image: teku:local
     volumes:
       - teku-data:/var/lib/teku
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g
     entrypoint:
@@ -30,6 +32,8 @@ services:
     volumes:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
@@ -37,6 +41,8 @@ services:
     user: teku
     volumes:
       - teku-data:/var/lib/teku
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     entrypoint:
       - /opt/teku/bin/teku 
       - voluntary-exit
