--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -19,6 +19,7 @@ ARG UID=10002
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   ca-certificates \
+  tzdata \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
