--- a/default.env
+++ b/default.env
@@ -43,6 +43,10 @@ TEKU_RAPID_SYNC=
 # or could just be an eth2/beacon Infura project URL for Teku or Lighthouse "validator only" setups. Not in use for Prysm or Nimbus.
 CC_NODE=http://consensus:5052
 
+# Beaconcha.in API key for sending client stats from Prysm. Used with prysm-stats.yml
+# Specify as just the API key or as APIKEY/MACHINENAME
+BEACON_STATS_API=
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 EC_P2P_PORT=30303
