Added geth-prune; distributed consensus/validator setup

--- a/default.env
+++ b/default.env
@@ -31,6 +31,7 @@ GRAFANA_HOST=grafana
 PRYSM_HOST=prysm
 EC_HOST=ec
 EC_WS_HOST=ecws
+CC_HOST=cc
 DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
@@ -40,7 +41,7 @@ DDNS_PROXY=true
 TEKU_RAPID_SYNC=
 
 # Consensus client address. This could be comma-separated for Lighthouse, with Infura as failover,
-# or could just be an eth2/beacon Infura project URL for Teku or Lighthouse "validator only" setups. Not in use for Prysm or Nimbus.
+# or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
 CC_NODE=http://consensus:5052
 
 # Beaconcha.in API key for sending client stats from Prysm. Used with prysm-stats.yml
