Source-build Teku with JDK 16

--- a/default.env
+++ b/default.env
@@ -74,62 +74,52 @@ RESTART=unless-stopped
 LOG_LEVEL=info
 
 # You can set specific version targets and choose
-# binary or source builds below.
-# Doing so is entirely optional, and arguably advanced
-# use.
+# binary or compiled from source builds below,
+# via `Dockerfile.binary` or `Dockerfile.source`
 
 # Nimbus
 NIM_SRC_BUILD_TARGET=stable
 NIM_DOCKER_TAG=amd64-latest
-# Change to Dockerfile.source to build from source
 NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
 TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 LH_SRC_BUILD_TARGET=stable
 LH_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 PRYSM_DOCKER_TAG=stable
-# Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 ERIGON_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
 ERIGON_DOCKERFILE=Dockerfile.source
 
 # OpenEthereum
 OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 OE_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
 OE_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
 GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 GETH_DOCKER_TAG=stable
-# Change to Dockerfile.source to build from source
 GETH_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
 NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 NM_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
 NM_DOCKERFILE=Dockerfile.binary
 
 # Besu
 BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 BESU_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
 BESU_DOCKERFILE=Dockerfile.binary
 
 # eth2.0-deposit-cli
