--- a/prometheus/erigon-prom.yml
+++ b/prometheus/erigon-prom.yml
@@ -1,6 +1,6 @@
-  - job_name: geth
+  - job_name: erigon
     metrics_path: /debug/metrics/prometheus
     scheme: http
     static_configs:
     - targets:
-      - execution:6060
+      - erigon:6060
