Metrics for standalone geth/erigon

--- a/geth-grafana.yml
+++ b/geth-grafana.yml
@@ -1,5 +1,5 @@
-# Not standalone, relies on one of the client-grafana.yml files,
-# and requires geth to be in the same "stack" as prometheus and grafana
+# Not standalone, relies on one of the {client}-grafana.yml files or
+# blank-grafana.yml
 version: "3.4"
 services:
   execution:
