--- a/prometheus/nimbus-prom.yml
+++ b/prometheus/nimbus-prom.yml
@@ -17,7 +17,7 @@ rule_files:
 scrape_configs:
   - job_name: 'nimbus'
     static_configs:
-      - targets: ['beacon:8008']
+      - targets: ['consensus:8008']
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node-exporter:9100']
